initial version with Lox Diagram working

--- a/examples/states-langium/language-server/langium-config.json
+++ b/examples/states-langium/language-server/langium-config.json
@@ -6,6 +6,9 @@
         "fileExtensions": [".sm"],
         "textMate": {
             "out": "../extension/syntaxes/states.tmLanguage.json"
+        },
+        "monarch": {
+            "out": "../extension/syntaxes/states.monarch.ts"
         }
     }],
     "out": "src/generated"
