fixed notebook support

--- a/examples/states-langium/extension/package.json
+++ b/examples/states-langium/extension/package.json
@@ -40,6 +40,17 @@
                 "path": "./syntaxes/states.tmLanguage.json"
             }
         ],
+        "notebooks": [
+            {
+                "type": "fefl-notebook",
+                "displayName": "FEFL Notebook",
+                "selector": [
+                    {
+                        "filenamePattern": "*.feflnb"
+                    }
+                ]
+            }
+        ],
         "customEditors": [
             {
                 "viewType": "states",
@@ -181,9 +192,9 @@
         "webview"
     ],
     "main": "./pack/extension/src/states-extension.cjs",
-    "devDependencies": {
+   "devDependencies": {
         "@types/node": "^14.17.3",
-        "@types/vscode": "1.50.0",
+        "@types/vscode": "~1.85.0",
         "esbuild": "^0.21.2",
         "sprotty-vscode": "^1.0.0",
         "vscode-languageclient": "^9.0.1"
