--- a/examples/states-langium/language-server/tsconfig.json
+++ b/examples/states-langium/language-server/tsconfig.json
@@ -1,17 +1,26 @@
 {
 	"extends": "../../../configs/base.tsconfig.json",
 	"compilerOptions": {
-    "target": "ES2017",
-    "module": "Node16",
-    "moduleResolution": "Node16",
-    "rootDir": "src",
-    "outDir": "out",
+    "target": "ES2022",
+    "module": "NodeNext",
     "lib": [
-      "es2019",
-      "dom"
+      "ES2022",
+      "WebWorker"
     ],
-    "declaration": false,
-    "declarationMap": false
+    // Enable project compilation
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "out",
+    "rootDir": "src",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noImplicitReturns": true,
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src"
